--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,16 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.google.firebase:firebase-analytics:17.2.3'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     implementation 'com.zolad:zoominimageview:1.0.0'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //permission dependency
+    implementation 'com.karumi:dexter:6.0.2'
+
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
